# MONOCLE

./: .gitignore  .npmrc  .prettierignore  CLAUDE.md  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
.changeset/: config.json
.github/workflows/: ci.yml  release.yml
apps/desktop/: README.md  electron-builder.yml  electron.vite.config.ts  package.json  tsconfig.node.json  tsconfig.web.json  vitest.config.ts
apps/desktop/resources/python/: .gitkeep
apps/desktop/scripts/: bundle-python.mjs  render-brand.mjs  screenshots.mjs
apps/desktop/src/main/: emitter.test.ts  emitter.ts  headers.test.ts  headers.ts  index.ts  ipc.ts  paths.ts  permissions.ts  python.test.ts  python.ts  session.test.ts  session.ts  sidecar.test.ts  sidecar.ts  updater.ts  window.ts
apps/desktop/src/main/da3/: integrity.test.ts  integrity.ts  pack.test.ts  pack.ts  support.test.ts  support.ts
apps/desktop/src/preload/: index.ts
apps/desktop/src/renderer/: index.html
apps/desktop/src/renderer/src/: App.vue  env.d.ts  main.ts
apps/desktop/src/renderer/src/components/: AdvancedControls.vue  BrandMark.vue  CameraView.vue  CapabilityList.vue  CaptureControls.vue  CaptureHud.vue  ComputeDeviceSelect.vue  Da3PackPanel.vue  DeviceSelect.vue  Disclosure.vue  EngineAlert.vue  EngineStatus.vue  Icon.vue  ImportMedia.vue  LiveDepthView.vue  MachineAdvisor.vue  MeshViewer.vue  OutputSelect.vue  ReconstructPanel.vue  ScanMethodPicker.vue  ScanPresetPicker.vue  StatusBar.vue  StatusIndicator.vue  UpdateBanner.vue  ViewerToolbar.vue  WorkflowStepper.vue
apps/desktop/src/renderer/src/composables/: useCamera.ts  useCaptureLoop.ts  useElapsed.ts  useEngineHealth.ts  useFrameEncoder.ts  useGpu.ts  useKeyframeGate.ts  useLiveDepth.ts  useLiveReconstruction.ts  useMachineProfile.ts  useStageTabs.test.ts  useStageTabs.ts  useWorkflowSteps.ts
apps/desktop/src/renderer/src/lib/: capability.test.ts  capability.ts  computeDevices.ts  duration.test.ts  duration.ts  errors.test.ts  errors.ts  liveDepthModel.test.ts  liveDepthModel.ts  meshFormat.test.ts  meshFormat.ts  meshLoading.ts  outputPreview.test.ts  outputPreview.ts  outputs.test.ts  outputs.ts  presets.ts  scanEngine.test.ts  scanEngine.ts  updateState.test.ts  updateState.ts
apps/desktop/src/renderer/src/stores/: capture.test.ts  capture.ts  da3.ts  engine.ts
apps/desktop/src/renderer/src/styles/: base.css  main.css  theme.test.ts  theme.ts  tokens.css
apps/desktop/src/renderer/src/workers/: depthWorker.ts
apps/desktop/src/shared/: ipc.ts
configs/tsconfig/: base.json  library.json  package.json  vue.json
docs/: AUDIT.md  BUILD.md  DESIGN.md  HANDOFF.md  KICKOFF-redesign.md  SLAM.md  UX-AUDIT.md  architecture.md  roadmap.md
scripts/: build-signed.sh  fetch-models.mjs
sidecar/: README.md  pyproject.toml
sidecar/monocle_sidecar/: __init__.py  __main__.py  geometry_io.py  live.py  models.toml  params.py  registry.py  rpc.py  server.py
sidecar/monocle_sidecar/backends/: __init__.py  _depth_grid.py  base.py  da3_outputs.py  depth_anything_v2.py  multiview.py  synthetic.py  walkaround.py
sidecar/monocle_sidecar/fusion/: __init__.py  cleanup.py  export.py  export_obj.py  export_usdz.py  frames.py  tsdf.py
sidecar/monocle_sidecar/media/: __init__.py  ingest.py  prepare.py  selection.py
sidecar/monocle_sidecar/pose/: __init__.py  base.py  gates.py  identity.py  loop_closure.py  mast3r.py  metric_scale.py  orb_pgo.py  pipeline.py  pose_graph.py  scale_align.py  visual_odometry.py
sidecar/tests/: test_core_import.py  test_da3_outputs.py  test_depth_backend.py  test_export_formats.py  test_fusion_contract.py  test_fusion_export.py  test_fusion_params.py  test_gates.py  test_live.py  test_live_reconstruct_rpc.py  test_loop_closure.py  test_mast3r.py  test_media_ingest.py  test_media_prepare.py  test_media_selection.py  test_metric_scale.py  test_multiview_backend.py  test_multiview_color.py  test_multiview_empty.py  test_multiview_outputs.py  test_orb_pgo.py  test_params.py  test_pose.py  test_pose_graph.py  test_pose_pipeline.py  test_prepare_media_rpc.py  test_reconstruct.py  test_registry.py  test_rpc.py  test_scale_align.py  test_visual_odometry.py  test_walkaround.py  test_walkaround_integration.py
(+2 files in other folders)
