[project]
name = "monocle-sidecar"
version = "0.1.0"
description = "MONOCLE inference sidecar: monocular depth and multi-view reconstruction over JSON-RPC."
requires-python = ">=3.11"
# The core stays dependency-free so health and backend listing run on a bare
# Python. Heavy inference lives behind the optional extras below.
dependencies = []

[project.optional-dependencies]
depth = [
  "numpy>=1.26",
  "pillow>=10.0",
  "onnxruntime>=1.19",
  "opencv-contrib-python>=4.10",
  "huggingface_hub>=0.24",
  "trimesh>=4.5",
]
reconstruct = [
  "numpy>=1.26",
  "torch>=2.3",
  "open3d>=0.18",
  "trimesh>=4.5",
  "lib3mf>=2.5",
]
# The default Object scan (walk-around: DA2 depth + ORB visual odometry + Open3D
# TSDF) needs everything in `depth` plus Open3D, but NOT torch. This is `depth`
# plus open3d, so a shipped build can run the default scan without carrying the
# ~2.5 GB torch that only the Depth Anything 3 multi-view path requires. It is
# what `bundle:python` installs by default.
walk = [
  "numpy>=1.26",
  "pillow>=10.0",
  "onnxruntime>=1.19",
  "opencv-contrib-python>=4.10",
  "huggingface_hub>=0.24",
  "open3d>=0.18",
  "trimesh>=4.5",
]
# Colored 3MF export for 3D printing. Kept out of the base `depth`/`walk` extras
# because lib3mf>=2.5 ships no arm64-Linux wheel, so pinning it there breaks the
# base install (and the bundled interpreter) on that platform. The 3MF writer in
# fusion/export.py imports lib3mf lazily and degrades gracefully when it is
# absent, so this extra is purely opt-in: install it wherever a wheel exists to
# add 3MF alongside the always-present STL/PLY/GLB/OBJ/USDZ. `reconstruct` and
# `multiview` already include lib3mf because they only install on torch-capable
# (x86-64) platforms, which do have wheels.
color-print = [
  "lib3mf>=2.5",
]
# Multi-view (Depth Anything 3) runtime deps. Depth Anything 3 itself is NOT
# listed here: it must be installed with --no-deps because its pins on xformers
# and opencv-python do not build on every platform (macOS 12) and are not
# required at runtime (xformers is an optional speedup; cv2 is provided by
# opencv-contrib-python). After installing this extra, run:
#   pip install depth-anything-3 --no-deps
# Use an Apache-2.0 checkpoint via MONOCLE_DA3_CKPT=depth-anything/DA3-BASE
# (DA3-LARGE and DA3-GIANT are CC-BY-NC-4.0).
multiview = [
  "numpy>=1.26",
  "torch>=2.3",
  "torchvision>=0.18",
  "open3d>=0.18",
  "trimesh>=4.5",
  "lib3mf>=2.5",
  "opencv-contrib-python>=4.10",
  "omegaconf>=2.3",
  "einops>=0.7",
  "safetensors>=0.4",
  "plyfile>=1.0",
  "imageio>=2.30",
  "pycolmap>=3.11",
  "moviepy>=1.0",
  "evo>=1.28",
  "e3nn>=0.5",
]
# MASt3R-SLAM pose tracking (pose/mast3r.py). torch is the floor dependency; the
# tracker package itself is not on PyPI and is installed separately, like Depth
# Anything 3. After installing this extra, follow docs/SLAM.md to install the
# tracker. Its default checkpoints are non-commercial; gate them for a shippable
# build the way multiview.py gates DA3-LARGE/GIANT.
slam = [
  "numpy>=1.26",
  "torch>=2.3",
  "opencv-contrib-python>=4.10",
]
dev = [
  "pytest>=8.0",
]

[project.scripts]
monocle-sidecar = "monocle_sidecar.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["monocle_sidecar"]
